# myopenclaw

./: .gitignore  ADMIN_GUIDE.md  CMakeLists.txt  PRD.md  ROADMAP.md  USER_GUIDE.md  devlog.md  devplan.md
agent/: package-lock.json  package.json
agent/public/: app.js  index.html  styles.css
agent/src/: agent.ts  config.ts  mailparser.d.ts  planner.ts  presentation.ts  rate_limit.ts  redact.ts  server.ts  summarize.ts  types.ts
agent/src/ai/: registry.ts
agent/src/connectors/: command.ts  email_imap.ts  email_smtp.ts  git.ts  telegram.ts  web.ts
agent/src/storage/: memory.ts
agent/src/tools/: index.ts
src/: main.cpp
